files/oscar-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oscar
---
apiVersion: v1
kind: Namespace
metadata:
  name: oscar-fn
