files/openfaas-external-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
  name: gateway-external
  namespace: openfaas
spec:
  ports:
  - name: http
    nodePort: 31112
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway
  type: NodePort
