files/openfaas-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: openfaas
  name: openfaas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: gateway
            servicePort: 8080
          path: /openfaas/(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: openfaas
  name: openfaas-ui
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://$host/openfaas$request_uri
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: gateway
            servicePort: 8080
          path: /ui/
